fix overflow
hide overflow across the body and html

--- a/src/input.css
+++ b/src/input.css
@@ -13,9 +13,10 @@
     outline: none;
     text-decoration: none;
     list-style-type: none;
+    
 }
 
-body {
+body, html {
     overflow-x: hidden !important;
     /* Prevents overflow distortion */
     overflow-y: auto !important;
